--- a/UD-Viz-GCCV/assets/config/config.json
+++ b/UD-Viz-GCCV/assets/config/config.json
@@ -22,6 +22,11 @@
         "name": "groupe0",
         "folder": "../assets/slideshow",
         "diapositives": ["1.png", "2.png", "3.png", "4.png", "5.png", "6.png"]
+      },
+      {
+        "name":"groupe2",
+        "folder": "../assets/slideshow/groupe2",
+        "diapositives":["Emprise_Projet.png", "test.png"]
       }
     ],
     "textureRotation": -90  
